add a little css and fix html

--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <i class="fa-solid fa-bars"></i>
-        <headder>What's up Joy!</header>
-        <input type="text" placeholder="Search...">
+    <div class="overview">
+        <div>
+            <i class="fa-solid fa-bars"></i>
+            <header>What's up Joy!</header>
+            <input type="text" placeholder="Search...">
+        </div>
+        <div>
+            <h2>Categories</h2>
+            <ul>
+                <li>Home</li>
+                <li>School</li>
+            </ul>
+        </div>
+        <div>
+            <h2>On progress</h2>
+            <ul class="todo list">
+                <li>Do the housework <span><i class="fa-solid fa-trash-can"></i></span> </li>
+                <li>Wash dishes <span><i class="fa-solid fa-trash-can"></i></span> </li>
+                <li>Clean the house <span><i class="fa-solid fa-trash-can"></i></span> </li>
+                <li>Fix the bike <span><i class="fa-solid fa-trash-can"></i></span> </li>
+                <li>Lab deadline on Friday <span><i class="fa-solid fa-trash-can"></i></span></li>
+                <li>Database homework <span><i class="fa-solid fa-trash-can"></i></span> </li>
+            </ul>
+        </div>
     </div>
-    <div>
-        <h2>Categories</h2>
-        <ul>
-            <li>Home</li>
-            <li>School</li>
-        </ul>
-    </div>
-    <div>
-        <h2>On progress</h2>
-        <ul>
-            <li>Do the housework</li>
-            <li>Wash dishes</li>
-            <li>Clean the house</li>
-            <li>Fix the bike</li>
-            <li>Lab deadline on Friday</li>
-            <li>Database homework</li>
-        </ul>
-    </div>
+    
 </body>
 </html>
