add some effect with css

--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
     <title>Todo App</title>
     <script src="https://kit.fontawesome.com/b82a3777a7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <div class="overview">
-        <div>
+        <div class="head">
             <i class="fa-solid fa-bars"></i>
-            <header>What's up Joy!</header>
-            <input type="text" placeholder="Search...">
+            <h1>Todo App</h1>
+            <input style="font-family: 'Font Awesome 6 Free'; font-weight: 700;" type="text" placeholder="&#xf002; Search...">
         </div>
-        <div>
+        <div class="Categories">
             <h2>Categories</h2>
             <ul>
                 <li>Home</li>
                 <li>School</li>
             </ul>
         </div>
-        <div>
-            <h2>On progress</h2>
-            <ul class="todo list">
+        <div class="Tasks">
+            <h2>Tasks</h2>
+            <ul class="todoList">
                 <li>Do the housework <span><i class="fa-solid fa-trash-can"></i></span> </li>
                 <li>Wash dishes <span><i class="fa-solid fa-trash-can"></i></span> </li>
                 <li>Clean the house <span><i class="fa-solid fa-trash-can"></i></span> </li>
@@ -32,6 +33,7 @@
                 <li>Lab deadline on Friday <span><i class="fa-solid fa-trash-can"></i></span></li>
                 <li>Database homework <span><i class="fa-solid fa-trash-can"></i></span> </li>
             </ul>
+            <button><i class="fa-solid fa-plus"></i></button>
         </div>
     </div>
     
