add some effect and fix bug

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </div>
         <div class="Categories">
             <h2>Categories</h2>
-            <ul>
-                <li>Home</li>
-                <li>School</li>
-            </ul>
+            <div class="items">
+                <p class="item">Home</p>
+                <p class="item">School</p>
+            </div>
         </div>
         <div class="Tasks">
             <h2>Tasks</h2>
             <ul class="todoList">
-                <li>Do the housework <span><i class="fa-solid fa-trash-can"></i></span> </li>
+                <li><input type="checkbox" id="check">Do the housework <span><i class="fa-solid fa-trash-can"></i></span> </li>
                 <li>Wash dishes <span><i class="fa-solid fa-trash-can"></i></span> </li>
                 <li>Clean the house <span><i class="fa-solid fa-trash-can"></i></span> </li>
                 <li>Fix the bike <span><i class="fa-solid fa-trash-can"></i></span> </li>
