--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><input type="checkbox" id="check3"><label for="check3">Clean the house</label> <span><i class="fa-solid fa-trash-can"></i></span> </li>
                 <li><input type="checkbox" id="check4"><label for="check4">Fix the bike</label> <span><i class="fa-solid fa-trash-can"></i></span> </li>
                 <li><input type="checkbox" id="check5" value="check-55" checked disabled><label for="check5">Lab deadline on Friday</label> <span><i class="fa-solid fa-trash-can"></i></span></li>
-                <li><input type="checkbox" id="check6"><label for="check6">Do hoemwork</label> <span><i class="fa-solid fa-trash-can"></i></span> </li>
+                <li><input type="checkbox" id="check6"><label for="check6">Do homework</label> <span><i class="fa-solid fa-trash-can"></i></span> </li>
             </ul>
             <button><i class="fa-solid fa-plus"></i></button>
         </div>
