--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         <div class="Categories">
             <h2>Categories</h2>
-            <div class="items">
+            <!-- <div class="items">
                 <p class="item">Home</p>
                 <p class="item">School</p>
-            </div>
+            </div> -->
         </div>
         <h2>Tasks</h2>
         <div class="Tasks">
-            
+
             <ul class="todoList">
                 
             </ul>
